anotações sobre operações

--- a/Gustavo Guanabara (Curso JS)/aula 07/index.html
+++ b/Gustavo Guanabara (Curso JS)/aula 07/index.html
@@ -30,4 +30,44 @@ var x = 5
 x = x + 1 // x++ // ++x
 x = x - 1 // x-- // --x
 
+----------------------------------------------------------------
+
+relacionais
+
+> = maior
+< = menor
+>= = maior ou igual
+<= = menor ou igual
+== = igual
+!= = não é igual
+=== igual e idêntico relacionado a number ou string
+
+----------------------------------------------------------------
+
+lógicos
+
+! negação(não)
+&& conjunção(e)
+|| disjunção(ou)
+
+----------------------------------------------------------------
+
+ternário
+
+teste ? true : false 
+
+Exemplo1:
+var media = 5.5
+
+media >= 7? "aprovado": "reprovado"
+
+resposta do console será = reprovado
+
+Exemplo2:
+var media = 8.5
+
+media >= 7? "aprovado": "reprovado"
+
+resposta do console será = aprovado
+
 -->
