--- a/Gustavo Guanabara (Curso JS)/exercicios01/ex001/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios01/ex001/index.html
@@ -3,9 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+  <title>Modelo de Exercício</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Título</h1>
+  </header>
+  <section>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+  </section>
+  <footer>
+    <p>&copy;Raíjoia.mv</p>
+  </footer>
+
+<script src="./script.js"></script>
+
 </body>
 </html>
