modelo and styles

--- a/Gustavo Guanabara (Curso JS)/exercicios01/modelo/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios01/modelo/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Hora do Dia</title>
+  <title>Modelo de Exercício</title>
 </head>
 <body>
   <header>
-    <h1>Hora do Dia</h1>
+    <h1>Título</h1>
   </header>
   <section>
     <div>
@@ -19,7 +19,7 @@
     </div>
   </section>
   <footer>
-    <p>&copy;raijoia.mv</p>
+    <p>&copy;Raíjoia.mv</p>
   </footer>
 
 <script src="./script.js"></script>
