--- a/Gustavo Guanabara (Curso JS)/exercicios01/ex001/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios01/ex001/index.html
@@ -6,16 +6,16 @@
   <link rel="stylesheet" href="styles.css">
   <title>Hora do Dia</title>
 </head>
-<body>
+<body onload="carregar()">
   <header>
     <h1>Hora do Dia</h1>
   </header>
   <section>
-    <div>
-
+    <div id="msg">
+      Aqui vai aparecer a mensagem...
     </div>
-    <div>
-
+    <div id="foto">
+      <img id="imagem" src="./image/fotomanha.jpg" alt="foto da manhã">
     </div>
   </section>
   <footer>
