--- a/Gustavo Guanabara (Curso JS)/exercicios01/ex002/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios01/ex002/index.html
@@ -22,7 +22,7 @@
         <label for="fem">Feminino</label>
       </p>
       <p>
-        <input type="button" value="verificar">
+        <input type="button" value="verificar" onclick="verificar()">
       </p>
     </div>
     <div id="res">
