--- a/Gustavo Guanabara (Curso JS)/exercicios02/ex02/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios02/ex02/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Modelo de Exercício</title>
+  <title>Tabuada</title>
 </head>
 <body>
   <header>
-    <h1>Título</h1>
+    <h1>Tabuada</h1>
   </header>
   <section>
     <div>
-
+      <p>
+        Número: <input type="number" name="txtn1" id="txtn1">
+        <input type="button" value="Gerar Tabuada" onclick="verificar()">
+      </p>
+      <p>
+        <select name="tabuada" id="tabuada">Digite um numero acima</select>
+      </p>
     </div>
     <div>
 
