--- a/Gustavo Guanabara (Curso JS)/exercicios02/ex02/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios02/ex02/index.html
@@ -13,14 +13,16 @@
   <section>
     <div>
       <p>
-        Número: <input type="number" name="txtn1" id="txtn1">
-        <input type="button" value="Gerar Tabuada" onclick="verificar()">
+        Número: <input type="number" name="num" id="txtn">
+        <input type="button" value="Gerar Tabuada" onclick="tabuada()">
       </p>
       <p>
-        <select name="tabuada" id="tabuada">Digite um numero acima</select>
+        <select name="tabuada" id="seltab" size="10">
+          <option>Digite um número acima</option>
+        </select>
       </p>
     </div>
-    <div>
+    <div id="res">
 
     </div>
   </section>
