--- a/Gustavo Guanabara (Curso JS)/exercicios03/ex01/index.html
+++ b/Gustavo Guanabara (Curso JS)/exercicios03/ex01/index.html
@@ -2,24 +2,35 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Modelo de Exercício</title>
+  <title>Analisador de Números</title>
 </head>
 <body>
   <header>
-    <h1>Título</h1>
+    <h1>Analisador de Números</h1>
   </header>
   <section>
     <div>
+      <!-- Colocando os botões e números -->
+      <p>
+        Número (Entre 1 e 100): <input type="number" name="txtn" id="txtn">
+        <input type="button" value="adicionar" onclick="adicionar()">
+      </p>
+
+      <p>
+        <select name="tabuada" id="seltab" size="10">
+          <option></option>
+        </select> <br>
+        <input type="button" value="finalizar" onclick="finalizar()">
+      </p>
 
     </div>
-    <div>
+    <div id="res">
 
     </div>
   </section>
   <footer>
-    <p>&copy;Raíjoia.mv</p>
+    <p>&copy;raíjoia.mv</p>
   </footer>
 
 <script src="./script.js"></script>
