--- a/study(JS)/modularização/index.html
+++ b/study(JS)/modularização/index.html
@@ -13,6 +13,6 @@
       <p id="dados"></p>
     </section>
   </main>
-  <script type="module" src="./ambiente.js"></script>
+  <script type="module" src="./ambiente.js"></script> <!-- coloca o type="module" para especificar para dizer ao sistema que o arquivo é um módulo -->
 </body>
 </html>
